--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
         <hr>
         <div class="row">
             <div class="large-12 columns">
-                <p>provided by Kirschners GmbH 2024</p>
+                <p>(C) Kirschners GmbH 2024</p>
             </div>
         </div>
     </div>
