--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,26 +50,28 @@
     <!-- End Main Content -->
 
     <!-- Sidebar -->
+<!--
 
     <aside class="large-3 columns">
-
+        
         <h4>Posts</h4>
         <ul id="posts" class="posts nav">
             {% for post in site.posts limit: 5 %}
             <li><a href="{{ post.url | prepend:site.baseurl }}">{{ post.navtitle }}</a></li>
             {% endfor %}
         </ul>
-
+        
         <div class="panel">
             <h5>Featured</h5>
-
+            
             <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon
                 nulla pork belly cupidatat meatloaf cow.</p>
-        </div>
-
-    </aside>
-
-    <!-- End Sidebar -->
+            </div>
+            
+        </aside>
+        
+-->
+        <!-- End Sidebar -->
 </div>
 
 <!-- End Main Content and Sidebar -->
@@ -82,7 +84,7 @@
         <hr>
         <div class="row">
             <div class="large-12 columns">
-                <p>(C) Kirschners GmbH 2024</p>
+                <p>&#169; Kirschners GmbH 2024</p>
             </div>
         </div>
     </div>
