--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
         <hr>
         <div class="row">
             <div class="large-12 columns">
-                <p>&#169; Kirschners GmbH 2024 - last updated on {{ "now" | date: "%Y-%m-%d %H:%M:%S" }}</p>
+                <p>&#169; Kirschners GmbH 2024 - last updated on {{ "now" | date: "%Y-%m-%d %H:%M:%S" }} - {{site.github.build_revision}}</p>
             </div>
         </div>
     </div>
