remove superfluos folders

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
         <hr>
         <div class="row">
             <div class="large-12 columns">
-                <p>&#169; Kirschners GmbH 2024 - last updated on {{ "now" | date: "%Y-%m-%d %H:%M:%S" }} - {{site.github.build_revision}}</p>
+                <p>&#169; Kirschners GmbH 2025 - last updated: {{ "now" | date: "%Y-%m-%d %H:%M:%S" }} - git-sha: <a href="https://github.com/klibio/cdn/tree/{{site.github.build_revision}}">{{site.github.build_revision}}</a></p>
             </div>
         </div>
     </div>
