--- a/css/asciidoctor.css
+++ b/css/asciidoctor.css
@@ -1,3 +1,21 @@
+/* --- Dark/Light mode toggle styles --- */
+.dark-mode {
+	background: #181818 !important;
+	color: #eee !important;
+}
+.dark-mode a { color: #8ab4f8 !important; }
+.dark-mode pre, .dark-mode code { background: #222 !important; color: #eee !important; }
+
+@media (prefers-color-scheme: dark) {
+	body:not(.light-mode) {
+		background: #181818;
+		color: #eee;
+	}
+}
+
+body.dark-mode-toggle {
+	transition: background 0.3s, color 0.3s;
+}
 /*! Asciidoctor default stylesheet | MIT License | https://asciidoctor.org */
 @import "https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700";
 html{font-family:sans-serif;-webkit-text-size-adjust:100%}
