--- a/css/asciidoctor.css
+++ b/css/asciidoctor.css
@@ -1,3 +1,7 @@
+/* Remove underline from all links, keep color from Asciidoctor defaults */
+a, a:visited, a:active, a:hover, a:focus {
+	text-decoration: none;
+}
 ul, ol {
 	display: block;
 	margin: 1em 0 1em 2em;
@@ -9,13 +13,19 @@ ul li, ol li {
 	display: list-item;
 	margin: 0.5em 0;
 }
+
 /* --- Dark/Light mode toggle styles --- */
 .dark-mode {
-	background: #181818 !important;
-	color: #eee !important;
+	background: #181818;
+	color: #eee;
 }
-.dark-mode a { color: #8ab4f8 !important; }
-.dark-mode pre, .dark-mode code { background: #222 !important; color: #eee !important; }
+.dark-mode a {
+	color: #8ab4f8;
+}
+.dark-mode pre, .dark-mode code {
+	background: #222;
+	color: #eee;
+}
 
 @media (prefers-color-scheme: dark) {
 	body:not(.light-mode) {
@@ -82,7 +92,7 @@ textarea{height:auto;min-height:50px}
 select{width:100%}
 .subheader,.admonitionblock td.content>.title,.audioblock>.title,.exampleblock>.title,.imageblock>.title,.listingblock>.title,.literalblock>.title,.stemblock>.title,.openblock>.title,.paragraph>.title,.quoteblock>.title,table.tableblock>.title,.verseblock>.title,.videoblock>.title,.dlist>.title,.olist>.title,.ulist>.title,.qlist>.title,.hdlist>.title{line-height:1.45;color:#7a2518;font-weight:400;margin-top:0;margin-bottom:.25em}
 div,dl,dt,dd,ul,ol,li,h1,h2,h3,#toctitle,.sidebarblock>.content>.title,h4,h5,h6,pre,form,p,blockquote,th,td{margin:0;padding:0}
-a{color:#2156a5;text-decoration:underline;line-height:inherit}
+a{color:#2156a5;line-height:inherit}
 a:hover,a:focus{color:#1d4b8f}
 a img{border:0}
 p{line-height:1.6;margin-bottom:1.25em;text-rendering:optimizeLegibility}
